[package]
name = "server"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[dependencies]
#websocket = "0.20.2"
futures = "0.1"
tokio = "0.1"
common = { path = "../common" }


[dependencies.websocket]

git = "https://github.com/websockets-rs/rust-websocket.git"
